refactor: simplify cleanups — shared NsChunkId, casIncrementZkCounter helper, perFileIsolated helper, OpIdKey→UUID, recoverAll/Handle/encode tidy
- Move NsChunkId to strata-common (public record); delete local copies in ChunkStore + RepairCoordinator; update test imports + ControlLoopTest reflection
- Add Handle.nsKey field (pre-computed NsChunkId); replace per-iteration new NsChunkId(h.ns, h.id) lookups in the two background loops with h.nsKey
- Extract casIncrementZkCounter(zkPath) in ZkMetadataStore; allocateMetadataEpoch/nextSystemFileId/nextGlobalFileId become one-liners
- Extract perFileIsolated(ns, fileId, pass, body) in RepairCoordinator; refactor scanOnce + ownerRepairPass try/catch blocks; use int[] for lambda-mutable counters
- Replace OpIdKey private record with java.util.UUID in NamespaceMetadataState
- recoverAll: merge two Files.list passes into one, switch to newVirtualThreadPerTaskExecutor, add named imports, .toList() in recoverNamespace
- Delete dead no-arg forceDirectory() overload (zero callers confirmed)
- Remove unused ns param from createImportTemp; update ControlLoop call site
- Restore exact-fit BufWriter(33 + varint(len) + len) hint in Append.encode() hot path

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>